# ekko

./: .coderabbit.yaml  .containerignore  .coveragerc  .cz.toml  .dockerignore  .editorconfig  .env.example  .env.local.example  .gitattributes  .gitignore  .gitnexusignore  .lychee.toml  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .redocly.yaml  .secrets.baseline  .spectral.yaml  .typos.toml  .yamllint.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PROGRESS.md  CLEANUP_SUMMARY.md  CLEANUP_TODO.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_EXECUTION_REPORT.md  IMPLEMENTATION_COMPLETE.txt  LICENSE  MASTER_TODO.md  PROJECT_STATUS_BOARD.md  QUICK_ACTION_PLAN.md  README.dev.md  (+23 more)
.agents/: README.md  TODO.md  agentic-topology.json  mcp.servers.json  parity-map.json  sync_agentic_setup.py
.azuredevops/: README.md
.claude/: README.md  mcp.json  settings.json
backend/: .coveragerc  OBSERVABILITY_TODO.md  README.md  bandit.toml  keploy-logs.txt  pyproject.toml  pytest.ini  ruff.toml  tox.ini  ty.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/ekko/: __init__.py  __main__.py
backend/src/ekko/ai/chains/: conversational.py
backend/src/ekko/ai/crewai/: __init__.py  callbacks.py  constants.py  crew.py  flows.py  hmas.py  knowledge.py  memory.py  models.py  service.py  templates.py  yaml_config.py
backend/src/ekko/ai/crewai/config/: agents.yaml  tasks.yaml
backend/src/ekko/ai/crewai/tools/: __init__.py  pii_tool.py
backend/src/ekko/ai/embeddings/: service.py
backend/src/ekko/ai/llm/: adapter.py
backend/src/ekko/ai/pii/: __init__.py  anonymizer.py  patterns.py
backend/src/ekko/ai/prompts/: __init__.py  provider.py  registry.py
backend/src/ekko/ai/prompts/versions/: conversational_system.v1.txt  registry.json  summary_chunks.v1.txt
backend/src/ekko/application/dtos/: __init__.py  _base.py
backend/src/ekko/application/handlers/: __init__.py
backend/src/ekko/application/mappers/: __init__.py
backend/src/ekko/application/services/: chat_service.py  summarizer_service.py
backend/src/ekko/cli/: evaluator.py  postgres_to_sqlite.py  prompt_registry.py  run_app.py  send_tcp.py
backend/src/ekko/composition/: app_factory.py  container.py  lifespan.py
backend/src/ekko/config/: __init__.py  logging_config.py  openapi_config.py  runtime.py
backend/src/ekko/config/enums/: __init__.py
backend/src/ekko/config/settings/: __init__.py  base.py  dev.py  local.py  prod.py  test_env.py
backend/src/ekko/core/: __init__.py  events.py  types.py
backend/src/ekko/core/entities/: __init__.py
backend/src/ekko/core/enums/: __init__.py  ai.py  audio.py  base.py  common.py  deployment.py  environment.py  messaging.py
backend/src/ekko/core/exceptions/: __init__.py
backend/src/ekko/core/interfaces/: __init__.py  auth.py  chat.py  pii.py  transcript.py
backend/src/ekko/core/interfaces/services/: __init__.py
backend/src/ekko/core/ports/: __init__.py
backend/src/ekko/core/ports/repositories/: __init__.py
backend/src/ekko/core/value_objects/: __init__.py  audio_chunk.py  conversation_summary.py  intent_classification.py  pii.py  transcript_segment.py  transcription_info.py
backend/src/ekko/infrastructure/: tcp_queue.py
backend/src/ekko/infrastructure/adapters/: __init__.py  audio_streamer_adapter.py  prompt_adapter.py  stt_adapter.py
backend/src/ekko/infrastructure/audio_streamer/: __init__.py  audio_streamer.py  audio_streamer_controller.py  audio_streamer_tcp_server.py
backend/src/ekko/infrastructure/auth/: jwt_adapter.py
backend/src/ekko/infrastructure/concurrency/: __init__.py  queue_manager.py  thread_manager.py
backend/src/ekko/infrastructure/db/: __init__.py  base.py  engine.py  session.py
backend/src/ekko/infrastructure/helpers/: __init__.py  retry.py
backend/src/ekko/infrastructure/llm/: __init__.py  chat_adapter.py
backend/src/ekko/infrastructure/openai/: openai_client.py
backend/src/ekko/infrastructure/stt/: __init__.py  azure_speech_stt.py  transcriber.py
backend/src/ekko/presentation/api/: dependencies.py  dependency_registry.py  exception_handlers.py  rate_limiter.py  responses.py
backend/src/ekko/presentation/api/middleware/: __init__.py  authentication.py  authorization.py  cors.py  error_handler.py
backend/src/ekko/presentation/api/routes/: __init__.py  auth.py  health.py
backend/src/ekko/presentation/graphql/: dataloaders.py  extensions.py  mutations.py  queries.py  router.py  schema.py  subscriptions.py  types.py
backend/src/ekko/utils/: common.py  logger.py  types_.py
backend/tests/: README.md  conftest.py
backend/tests/database/: __init__.py  test_migrations.py
backend/tests/e2e/: conftest.py  example_backend_healthcheck.py  test_backend_healthcheck.py
backend/tests/factories/: entity_factories.py
backend/tests/fixtures/: conversations.py
backend/tests/fixtures/audio/: generate_fixtures.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: test_health_and_graphql.py  test_stream_and_mutations.py
backend/tests/integration/infrastructure/: conftest.py  test_audio.py  test_llm.py  test_stt.py
backend/tests/performance/: test_import_performance.py
backend/tests/property/: conftest.py  test_api_response_properties.py  test_pii_properties.py  test_registry_constants.py  test_settings_properties.py  test_value_object_properties.py
backend/tests/unit/: test_container.py
backend/tests/unit/ai/: __init__.py  test_conversational_chain.py  test_crewai_models.py  test_evaluator_naming.py  test_pii_anonymizer.py  test_prompt_registry.py
backend/tests/unit/application/: test_mappers.py  test_summarizer_service.py
backend/tests/unit/config/: test_settings.py
backend/tests/unit/core/: test_entities.py  test_enums.py  test_value_objects.py
backend/tests/unit/infrastructure/: test_chat_adapter.py  test_queue_manager.py  test_tcp_queue.py  test_thread_manager.py
backend/tests/unit/presentation/: test_graphql_schema.py
(+407 files in other folders)
