[project]
name = "ekko"
version = "0.1.0"
description = "Ekko — AI-powered voice assistant platform"
authors = [
    {name = "Laurits Fromberg", email = "lfr@tik-ai.dk"},
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "openai>=1.101.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.18",
    "alembic>=1.11.1",
    "asyncpg>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "keyboard>=0.13.5",
    "pyaudiowpatch>=0.2.12.7",
    "websockets>=15.0.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "faster-whisper>=1.2.0",
    "numpy>=1.26",
    "structlog>=24.0.0",
    "PyJWT[crypto]>=2.8",
    "strawberry-graphql[fastapi]>=0.262",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "crewai>=0.100",
]

requires-python = ">=3.12,<4.0"
readme = "../README.md"
license = {text = "MIT"}

[project.scripts]
ekko = "ekko.cli.run_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ekko"]

[dependency-groups]
dev = [
    # ── Testing ───────────────────────────────────────────────
    "pytest>=8.4.1",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=5.0",
    "hypothesis>=6.120",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "respx>=0.22",
    # ── Linting / Formatting ──────────────────────────────────
    "pre-commit>=4.3.0",
    "ruff>=0.12.0",
    "commitizen>=4.8.3",
    # ── Type checking ─────────────────────────────────────────
    "mypy>=1.17.1",
    "types-requests>=2.31.0",
    # ── Security ──────────────────────────────────────────────
    "bandit[toml]>=1.8.6",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.9",
    # ── Quality ───────────────────────────────────────────────
    "xenon>=0.9.3",
    "typos>=1.35.5",
    "yamllint>=1.37.1",
    # ── Database (test) ───────────────────────────────────────
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    # ── Environment ───────────────────────────────────────────
    "tox>=4.25",
    "tox-uv>=1.25",
]

db = [
    "sqlalchemy>=2.0",
    "alembic>=1.11",
    "asyncpg>=0.27.0",
]

rag = [
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.3.25",
]

# ─────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-x", "--tb=short"]
filterwarnings = [
    "ignore:cannot collect test class.*TestingConfig:pytest.PytestCollectionWarning",
]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need DB / network)",
    "property: Property-based tests (hypothesis)",
    "performance: Benchmarks and performance regression tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["src/ekko"]
branch = true
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "build", "dist"]
skips = ["B614", "B101"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
check_untyped_defs = true
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

# Ruff configuration is in backend/ruff.toml
# Commitizen configuration is in .cz.toml (root)
