[project]
name = "ekko"
version = "0.1.0"
description = "Ekko — AI-powered voice assistant platform"
authors = [{ name = "Laurits Fromberg", email = "lfr@tik-ai.dk" }]
dependencies = [
    "fastapi>=0.116.1",
    "starlette>=1.0.1",
    "uvicorn>=0.35.0",
    "openai>=2.36.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1,<2.11",
    "sqlalchemy>=2.0.41",
    "alembic>=1.11.1",
    "aiosqlite>=0.20.0",
    "psycopg[binary]>=3.2.0",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "pyaudiowpatch>=0.2.12.7; sys_platform == 'win32'",
    "websockets>=15.0.1",
    "tiktoken>=0.11.0",
    "azure-cognitiveservices-speech>=1.40.0",
    "numpy>=1.26",
    "structlog>=24.1.0",
    "strawberry-graphql[fastapi]>=0.315.7",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "urllib3>=2.7.0",
    "pyjwt>=2.13.0",
    "crewai>=1.14.4",
    "mako>=1.3.12",
    "duckdb>=1.5.2",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "tenacity>=9.0.0",
]

requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=5.0",
    "hypothesis>=6.145.1",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "respx>=0.22",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.15.18",
    "commitizen>=4.13.9",
    "ty>=0.0.51",
    "bandit[toml]>=1.9.4",
    "detect-secrets>=1.5.0",
    "xenon>=0.9.3",
    "typos>=1.47.2",
    "yamllint>=1.37.1",
    "tox>=4.28.4",
    "tox-uv>=1.16.0",
    "pyinstaller>=6.0",
    "testcontainers[postgres]>=4.14.2",
    "asyncpg>=0.30.0",
]
db = ["sqlalchemy>=2.0", "alembic>=1.11", "aiosqlite>=0.20.0"]
rag = [
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=0.3.25",
]

[tool.uv]
package = false
default-groups = ["dev"]
keyring-provider = "subprocess"
